--- a/config/YAML/default.yaml
+++ b/config/YAML/default.yaml
@@ -2,19 +2,11 @@ GPUS: (0,)
 WORKERS: 4
 PRINT_FREQ: 50
 
-DATASET:
-  DATASET: WFLW
-  ROOT: './data/wflw/images/'
-  TRAINSET: './data/wflw/face_landmarks_wflw_train.csv'
-  TESTSET: './data/wflw/face_landmarks_wflw_test.csv'
-  FLIP: true
-  SCALE_FACTOR: 0.25
-  ROT_FACTOR: 30
 MODEL:
   NAME: 'hrnet'
   NUM_JOINTS: 1
   INIT_WEIGHTS: true
-  PRETRAINED: 'hrnetv2_pretrained/hrnetv2_w18_imagenet_pretrained.pth'
+  PRETRAINED: './models/pretrained'
   SIGMA: 1.5
   IMAGE_SIZE:
     - 256
